iniciamos las API

--- a/misitio/templates/misitio/index.html
+++ b/misitio/templates/misitio/index.html
@@ -7,11 +7,11 @@
                 {% csrf_token %}
                 <label class="sr-only" for="inlineFormInputName2">Nombre</label>
                 <input type="text" class="form-control mb-2 mr-sm-2" id="inlineFormInputName2"
-                       placeholder="Nombre" name="fname">
+                       placeholder="Nombres" name="fname">
 
                 <label class="sr-only" for="inlineFormInputName2">Apellido</label>
                 <input type="text" class="form-control mb-2 mr-sm-2" id="inlineFormInputName2"
-                       placeholder="Apellido" name="lname">
+                       placeholder="Apellidos" name="lname">
 
 
                 <button type="submit" class="btn btn-secondary mb-2">Contame un chiste!</button>
