--- a/misitio/templates/misitio/Rodamientos.html
+++ b/misitio/templates/misitio/Rodamientos.html
@@ -2,60 +2,65 @@
 {% load static %}
 
 {% block content %}
+<p class="text-center text-md bg-secondary text-light"> RODAMIENTOS MARCA KOYO</p> <!--utilizamos brakpoints md y color gris bg-secondary -->
+
+
 <div class="row row-cols-1 row-cols-md-3 g-4">
-  <div class="col">
-    <div class="card">
+  <div class="col-6"> <!--Modificamos el tamaño de la columna 12 debe dar la suma por fila-->
+    <div class="card-3"> <!--Modificamos el tamaño de la columna en texto-->
       <img src="{% static 'misitio/imagen/6201.png' %}" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-      </div>
+        <h5 class="card-title">6201 2RSC3</h5>
+        <p class="card-text">Balinera generica marca koyo 6201 2RSC3, el precio puede variar, dependiendo de la cantidad.</p>
+        </div>
     </div>
   </div>
-  <div class="col">
-    <div class="card">
+  <div class="col-6"><!--en este caso 6 + 6 son 12 y pasa a la primer FILA 6201 Y 6202-->
+    <div class="card-3">
       <img src="{% static 'misitio/imagen/6202.png' %}" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <h5 class="card-title">6202 2RSC3</h5>
+        <p class="card-text">Balinera generica marca koyo 6202 2RSC3, el precio puede variar, dependiendo de la cantidad.</p>
       </div>
     </div>
   </div>
-  <div class="col">
-    <div class="card">
+  <div class="col-6">
+    <div class="card-3">
       <img src="{% static 'misitio/imagen/6203.png' %}" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+        <h5 class="card-title">6203 2RSC3</h5>
+        <p class="card-text">Balinera generica marca koyo 6203 2RSC3, el precio puede variar, dependiendo de la cantidad.</p>
       </div>
     </div>
   </div>
-  <div class="col">
-    <div class="card">
+  <div class="col-6">
+    <div class="card-3">
       <img src="{% static 'misitio/imagen/6204.png' %}" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <h5 class="card-title">6204 2RSC3</h5>
+        <p class="card-text">Balinera generica marca koyo 6204 2RSC3, el precio puede variar, dependiendo de la cantidad.</p>
       </div>
     </div>
   </div>
-  <div class="col">
-    <div class="card">
+  <div class="col-6">
+    <div class="card-3">
       <img src="{% static 'misitio/imagen/6205.png' %}" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <h5 class="card-title">6205 2RSC3</h5>
+        <p class="card-text">Balinera generica marca koyo 6205 2RSC3, el precio puede variar, dependiendo de la cantidad.</p>
       </div>
     </div>
   </div>
-  <div class="col">
-    <div class="card">
+  <div class="col-6">
+    <div class="card-3">
       <img src="{% static 'misitio/imagen/6301.png' %}" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <h5 class="card-title">6301 2RSC3</h5>
+        <p class="card-text">Balinera generica marca koyo 6301 2RSC3, el precio puede variar, dependiendo de la cantidad.</p>
       </div>
     </div>
-  </div>
+   </div>
+  
 </div>
+      
 {% endblock %}
