--- a/misitio/templates/misitio/base.html
+++ b/misitio/templates/misitio/base.html
@@ -23,6 +23,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>RodamientosAG</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+        
+        <!--Estilo para el boton whatsapp-->
+        <script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="{% static 'misitio/CSS/estilos.css' %}">
+        
       </head>
       <body>
     
@@ -33,7 +38,7 @@
     
                <!--Agregamos el logo en la pagina--> 
               <a class="navbar-brand" href="#">
-                <img src="{% static 'misitio/imagen/icono.jpg' %}" alt="Logo" width="53" height="55" class="d-inline-block align-text-top">
+                <img src="{% static 'misitio/imagen/logo.png' %}" alt="Logo" width="53" height="55" class="d-inline-block align-text-top">
               </a>
     
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -52,13 +57,13 @@
                     </li>
                 </ul>
     
-                <ul class="navbar-nav">
+                <!--<ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link" href="#">
                         <img src="{% static 'misitio/imagen/instagram.jpg' %}" alt="Logo" width="50" height="30" class="d-inline-block align-text-top">
                         </a>
                     </li>
-                </ul>
+                </ul> -->
                            
               </div>
             </div>
@@ -68,6 +73,12 @@
       {% block content %}
       {% endblock %}
     
+      <!--Agregar boton whatsapp-->
+      <a  href="https://api.whatsapp.com/send?phone=573137836557" class="btn-wsp" target="_blank">
+        <i class="fa fa-whatsapp icono"></i> 
+      </a>
+     
+
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
