--- a/misitio/templates/misitio/base.html
+++ b/misitio/templates/misitio/base.html
@@ -55,6 +55,9 @@
                     <li class="nav-item">
                     <a class="nav-link" href="{% url 'contactenos' %}">contactenos</a>
                     </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="{% url 'menu' %}">menu</a>
+                    </li>
                 </ul>
     
                 <!--<ul class="navbar-nav">
